Modifies validation and updates swagger with authorization
