# src/models/users.js
@@ -3,9 +3,9 @@ module.exports = (mongoose) => {
       'users',
       mongoose.Schema(
         {
-            userName: String,
+            firstName: String,
+            lastName: String,
             email: String,
-            password: String,
           },
           { 
             versionKey: false 
