# src/validation/putRequests/usersPutSchema.js
@@ -1,8 +1,11 @@
 const Joi = require('joi');
 
 exports.putUserSchema = Joi.object()
-  .keys({
-    userName: Joi.string()
+.keys({
+    firstName: Joi.string()
+        .min(3)
+        .max(40),
+    lastName: Joi.string()
         .min(3)
         .max(40),
     email: Joi.string()
